# dsdk

./: CHANGELOG.md  Makefile  README.rst  pylintrc  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: format.yml  main.yml  publish.yml  version.yml
docs/: sqs-consumer.md  tome-data-model.md
fixtures/0F9P4Bte2Z1GLiuOsryY/: bomb_action  bomb_defuse  bomb_state  bot_takeover  csds  grenade_state  header  item_equip  item_pickup  item_remove  molotov_state  player_action  player_blind  player_connect  player_death  player_disconnect  player_fall  player_footstep  player_hurt  player_info  player_interaction  player_personal  player_spawn  player_status  player_vector  round_end  round_mvp  round_start  round_state  tick  weapon_action  weapon_fire
fixtures/csds/2022/05/10/0a1effe9-262a-4828-bd4e-8a4265905905/: bomb_action  bomb_defuse  bomb_state  csds  grenade_state  header  item_equip  item_pickup  item_remove  molotov_state  player_action  player_blind  player_death  player_disconnect  player_fall  player_footstep  player_hurt  player_info  player_personal  player_spawn  player_status  player_vector  round_end  round_mvp  round_start  round_state  tick  weapon_action  weapon_fire
fixtures/csds/2022/05/10/3df19b7c-f242-4a0e-ace6-eaa4ad514774/: bomb_action  bomb_defuse  bomb_state  csds  grenade_state  header  item_equip  item_pickup  item_remove  molotov_state  player_action  player_blind  player_death  player_disconnect  player_fall  player_footstep  player_hurt  player_info  player_personal  player_spawn  player_status  player_vector  round_end  round_mvp  round_start  round_state  tick  weapon_action  weapon_fire
fixtures/csds/2022/05/10/9c743e74-dafa-4e59-83c9-3ff8544ede62/: bomb_action  bomb_state  csds  grenade_state  header  item_equip  item_pickup  item_remove  molotov_state  player_action  player_blind  player_death  player_disconnect  player_fall  player_footstep  player_hurt  player_info  player_personal  player_spawn  player_status  player_vector  round_end  round_mvp  round_start  round_state  tick  weapon_action  weapon_fire
fixtures/csds/2022/05/15/467a5bdf-58d5-40c3-9940-ca3703966e71/: bomb_action  bomb_defuse  bomb_state  csds  grenade_state  header  item_equip  item_pickup  item_remove  molotov_state  player_action  player_blind  player_death  player_disconnect  player_fall  player_footstep  player_hurt  player_info  player_personal  player_spawn  player_status  player_vector  round_end  round_mvp  round_start  round_state  tick  weapon_action  weapon_fire
fixtures/csds/2022/05/15/63cc7181-07c9-42fd-ade4-4eeb2cf4db6f/: csds  (+29 more)
pureskillgg_dsdk/: __init__.py  ds_model.py  ds_model_test.py  game_ds_loader_test.py
pureskillgg_dsdk/adx/: __init__.py  api.py  dataset.py  writer_fs.py  writer_s3.py
pureskillgg_dsdk/ds_io/: __init__.py  game_ds_loader.py  game_ds_loader_test.py  handle_value_error.py  normalize_instructions.py  normalize_instructions_test.py  reader_fs.py  reader_s3.py
pureskillgg_dsdk/ds_models/: __init__.py  find.py  model.py  model_test.py  s3_dataframe.py  s3_dataframe_set.py  s3_dataframe_test.py  s3_hashmap.py  s3_model.py  s3_scikit.py  s3_scikit_set.py  s3_xgboost.py  s3_xgboost_test.py  sagemaker_endpoint.py
pureskillgg_dsdk/exchange/: __init__.py  api.py  dataset.py  factory.py  writer_s3.py
pureskillgg_dsdk/sqs/: __init__.py  consumer.py  consumer_test.py  exceptions.py  message_translators.py
pureskillgg_dsdk/tome/: __init__.py  constants.py  curator.py  curator_test.py  factory.py  header_copier_fs.py  header_tome.py  loader.py  maker.py  manifest.py  reader_fs.py  scribe.py  writer_fs.py
