[project]
name = "pureskillgg-dsdk"
version = "2.0.0"
description = "Python Data Science Development Kit."
authors = [{ name = "PureSkill.gg", email = "contact@pureskill.gg" }]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.9,<4.0"
dependencies = [
    "boto3>=1.34.41,<2.0.0",
    "python-rapidjson>=1.6,<2.0.0",
    "pyarrow==14.0.*",
    "structlog>=22.1.0,<23.0.0",
    "pandas[performance,plot,output-formatting,computation,parquet,fss,aws]>=2.2.1,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/pureskillgg/dsdk"
Repository = "https://github.com/pureskillgg/dsdk"

[dependency-groups]
dev = [
    "black>=22.3.0,<23.0.0",
    "pylint>=2.4.0,<3.0.0",
    "pytest>=7.1.1,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-runner>=6.0.0,<7.0.0",
    "pytest-watch>=4.2.0,<5.0.0",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv]
# pyarrow 14 is built against the numpy 1.x ABI; keep numpy <2 as the
# original lock did (numpy 2 breaks pyarrow 14 with "_ARRAY_API not found").
constraint-dependencies = ["numpy<2"]

[tool.uv.build-backend]
module-root = ""
module-name = "pureskillgg_dsdk"
