[project]
name = "pureskillgg-dsdk"
version = "3.1.0"
description = "Python Data Science Development Kit."
authors = [{ name = "PureSkill.gg", email = "contact@pureskill.gg" }]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "aiobotocore>=3.7.0,<4.0.0",
    "boto3>=1.43.0,<2.0.0",
    "python-rapidjson>=1.23.0,<2.0.0",
    "numpy>=2.1.0,<3.0.0",
    "pyarrow>=16.0.0,<25.0.0",
    "structlog>=26.0.0,<27.0.0",
    "pandas[performance,plot,output-formatting,computation,parquet,fss,aws]>=2.3.0,<3.0.0",
]

[project.optional-dependencies]
# For s3_xgboost; optional so model-free consumers skip the wheel. XGBClassifier needs sklearn.
xgboost = ["xgboost>=3.2,<4.0.0", "scikit-learn>=1.9,<2.0.0"]

[project.urls]
Homepage = "https://github.com/pureskillgg/dsdk"
Repository = "https://github.com/pureskillgg/dsdk"

[dependency-groups]
dev = [
    "black>=26.0.0,<27.0.0",
    "pylint>=4.0.0,<5.0.0",
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-watch>=4.2.0,<5.0.0",
    "xgboost>=3.2,<4.0.0",
    "scikit-learn>=1.9,<2.0.0",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "pureskillgg_dsdk"

[tool.black]
target-version = ["py311"]
